# Text-Analysis

./: .gitignore  COMPLETION_SUMMARY.md  DEPLOYMENT_README.md  LICENSE  README.md  README_WEBAPP.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  pages.yml
docs/: API_GUIDE.md  README.md  _config.yml  test.html
docs/static/css/: print.css  style.css
docs/static/js/: analyzer.js  app.js  export.js  ui.js
docs/templates/: a4-compact-educational.html  educational-detailed.html  educational-print.html  print.html  report.html  teachers-guide.html
docs/tests/: frontend-tests.html
english_text_analyzer/: README.md  __init__.py  requirements.txt  setup.py
english_text_analyzer/analyzers/: __init__.py  complexity.py  content.py  grammar.py  structure.py  vocabulary.py
english_text_analyzer/batch/: __init__.py  comparator.py  processor.py
english_text_analyzer/cli/: __init__.py  main.py
english_text_analyzer/config/: __init__.py  manager.py  settings.py
english_text_analyzer/core/: __init__.py  analyzer.py  base_analyzer.py  orchestrator.py
english_text_analyzer/models/: __init__.py  config.py  results.py
english_text_analyzer/plugins/: __init__.py  base.py  manager.py
english_text_analyzer/tests/: __init__.py  test_basic_structure.py  test_batch_processor.py  test_cli.py  test_complexity_analyzer.py  test_config_manager.py  test_models_results.py  test_reports.py
english_text_analyzer/utils/: __init__.py  exceptions.py  text_processing.py
text_analyzer_webapp/: app.py
text_analyzer_webapp/static/css/: style.css
text_analyzer_webapp/static/js/: app.js
webapp/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  railway.json  render.yaml  requirements.txt  run.py  test_webapp.py
webapp/static/css/: print.css  style.css
webapp/static/js/: analyzer.js  app.js  export.js  ui.js
